--- a/PandasSeriesCheatSheet.ipynb
+++ b/PandasSeriesCheatSheet.ipynb
@@ -393,7 +393,7 @@
    ],
    "source": [
     "ps\n",
-    "# NOTE: sorting returns a copy (dinplace=False)"
+    "# NOTE: sort_xxx() returns a copy (inplace=False by default)"
    ]
   },
   {
