--- a/PandasSeriesCheatSheet.ipynb
+++ b/PandasSeriesCheatSheet.ipynb
@@ -644,8 +644,8 @@
     }
    ],
    "source": [
-    "ps2.dropna(inplace=True)\n",
-    "ps2"
+    "ps2.dropna()\n",
+    "# NOTE: returns a copy (inplace=False by default)"
    ]
   },
   {
@@ -657,6 +657,7 @@
      "data": {
       "text/plain": [
        "a    5.0\n",
+       "b    0.0\n",
        "c    7.0\n",
        "dtype: float64"
       ]
@@ -687,6 +688,7 @@
      "data": {
       "text/plain": [
        "a    5.0\n",
+       "b   -1.0\n",
        "c    7.0\n",
        "dtype: float64"
       ]
@@ -709,6 +711,7 @@
      "data": {
       "text/plain": [
        "a   -2.0\n",
+       "b    0.0\n",
        "c   -2.0\n",
        "dtype: float64"
       ]
