--- a/PandasDataFrameCheatSheet.ipynb
+++ b/PandasDataFrameCheatSheet.ipynb
@@ -370,7 +370,7 @@
     "ps1 = pd.Series([1, 2, 3], [1, 2, 3])\n",
     "ps2 = pd.Series([1, 2, 3], [2, 1, 3])\n",
     "pd.DataFrame({'ColA': ps1, 'ColB': ps2})\n",
-    "# NOTE: Series are re-ordered matched by Indices!"
+    "# NOTE: Series are re-ordered and matched by Indices!"
    ]
   },
   {
@@ -2544,8 +2544,8 @@
    "source": [
     "vc = df[['ColA', 'ColC']].value_counts()\n",
     "vc\n",
-    "# Returns Series containing Count of unique value combos with index set to\n",
-    "# value combos"
+    "# Returns Series containing Count of unique multi-col value combos with index\n",
+    "# set to the combos"
    ]
   },
   {
@@ -2998,8 +2998,8 @@
     }
    ],
    "source": [
-    "df['ColA'][df['ColA'] > 2]\n",
-    "# df.loc[df['ColA'] > 2, 'ColA']"
+    "df.loc[df['ColA'] > 2, 'ColA']\n",
+    "# df['ColA'][df['ColA'] > 2]"
    ]
   },
   {
@@ -4031,6 +4031,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ColA    12\n",
+       "ColB    15\n",
+       "ColC    18\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.apply(sum)\n",
+    "# Apply a function to a Col / Row(axis=1) Series"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4039,7 +4063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -4098,7 +4122,7 @@
        "2    X     3     6"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4110,7 +4134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -4165,18 +4189,20 @@
        "Y        2     5"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('ColA').sum()"
+    "df.groupby('ColA').sum()\n",
+    "# Group by unique values of given column(s), then apply an aggregation function\n",
+    "# to each group, column-by-column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -4188,7 +4214,7 @@
        "Name: ColB, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4200,7 +4226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -4255,7 +4281,7 @@
        "Y        2     5"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4266,7 +4292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -4337,7 +4363,7 @@
        "3    X    Z     4     8"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4352,7 +4378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -4365,7 +4391,7 @@
        "Name: ColC, dtype: int64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
