--- a/PandasSeriesCheatSheet.ipynb
+++ b/PandasSeriesCheatSheet.ipynb
@@ -688,7 +688,7 @@
      "data": {
       "text/plain": [
        "a    5.0\n",
-       "b   -1.0\n",
+       "b    0.0\n",
        "c    7.0\n",
        "dtype: float64"
       ]
@@ -699,12 +699,35 @@
     }
    ],
    "source": [
-    "ps2.replace(0, -1)"
+    "ps2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    5.0\n",
+       "b   -1.0\n",
+       "c    7.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps2.replace(0, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -716,13 +739,61 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ps2.replace([5, 7], -2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    5.0\n",
+       "b   -1.0\n",
+       "c   -2.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps2.replace({0: -1, 7: -2})\n",
+    "# NOTE: Skips over missing keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    NaN\n",
+       "b   -1.0\n",
+       "c   -2.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps2.map({0: -1, 7: -2})\n",
+    "# NOTE: Missing keys result in nulls"
    ]
   }
  ],
