--- a/PandasDataFrameCheatSheet.ipynb
+++ b/PandasDataFrameCheatSheet.ipynb
@@ -2117,7 +2117,8 @@
     }
    ],
    "source": [
-    "df.drop(['ColA', 'ColC'], axis='columns')"
+    "df.drop(columns=['ColA', 'ColC'])\n",
+    "# df.drop(['ColA', 'ColC'], axis='columns')"
    ]
   },
   {
