Added Wk1/1.4 and Wk1/1.5

--- a/Wk1/week1_FINAL.ipynb
+++ b/Wk1/week1_FINAL.ipynb
@@ -1555,7 +1555,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE, R2 using SGD= 0.00014267064803990558 0.5886591441425442\n"
+      "RMSE, R2 using SGD= 0.011944481907554868 0.5886591441425442\n"
      ]
     },
     {
@@ -1579,7 +1579,7 @@
     "plt.scatter(range(len(test_Y)), test_Y,  color='black')\n",
     "plt.scatter(range(len(pred_Y_from_GD)), pred_Y_from_GD, color='blue')\n",
     "\n",
-    "print(\"RMSE, R2 using SGD=\", MSE(test_Y, pred_Y_from_GD), r2_score(test_Y, pred_Y_from_GD))"
+    "print(\"RMSE, R2 using SGD=\", MSE(test_Y, pred_Y_from_GD, squared=False), r2_score(test_Y, pred_Y_from_GD))"
    ]
   },
   {
@@ -1640,7 +1640,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE, R2 for prediction all features = 0.0001590059869786599 0.5415619143191444\n"
+      "RMSE, R2 for prediction all features = 0.012609757609829774 0.5415619143191444\n"
      ]
     },
     {
@@ -1664,7 +1664,7 @@
     "# Plot predictions compared to test_Y, and also print MSE and R^2 score\n",
     "plt.scatter(range(len(test_Y)), test_Y,  color='black')\n",
     "plt.scatter(range(len(pred_Y_from_N)), pred_Y_from_N, color='blue')\n",
-    "print(\"RMSE, R2 for prediction all features =\", MSE(test_Y, pred_Y_from_N), r2_score(test_Y, pred_Y_from_N)) #[Low error high corr]"
+    "print(\"RMSE, R2 for prediction all features =\", MSE(test_Y, pred_Y_from_N, squared=False), r2_score(test_Y, pred_Y_from_N)) #[Low error high corr]"
    ]
   },
   {
@@ -1744,7 +1744,10 @@
    "source": [
     "def regularized_normal_equations_solution(X, Y, regularization_param):\n",
     "    X_with_ones = np.hstack([np.ones([train_X.shape[0], 1]), train_X])\n",
-    "    inv = np.linalg.inv(X_with_ones.T @ X_with_ones + regularization_param * X.shape[0] * np.identity(X_with_ones.shape[1]))\n",
+    "    I_0 = np.identity(X_with_ones.shape[1])\n",
+    "    I_0[0, 0] = 0\n",
+    "    # inv = np.linalg.inv(X_with_ones.T @ X_with_ones + regularization_param * X.shape[0] * I_0))\n",
+    "    inv = np.linalg.inv(X_with_ones.T @ X_with_ones + regularization_param * I_0)\n",
     "    return inv @ X_with_ones.T @ Y"
    ]
   },
@@ -1760,19 +1763,19 @@
      "output_type": "stream",
      "text": [
       "For regularization parameter 0.001\n",
-      "RMSE, R2 = 0.0001494547437333614 0.569099579739469\n",
+      "RMSE, R2 = 0.012631400406999156 0.5399868805179389\n",
       "-----\n",
       "For regularization parameter 0.003\n",
-      "RMSE, R2 = 0.0001410154635505259 0.593431289035816\n",
+      "RMSE, R2 = 0.012616040816199107 0.5411049382488677\n",
       "-----\n",
       "For regularization parameter 0.01\n",
-      "RMSE, R2 = 0.00013572695793108677 0.6086788431585013\n",
+      "RMSE, R2 = 0.0125649041947193 0.5448174793427187\n",
       "-----\n",
       "For regularization parameter 0.03\n",
-      "RMSE, R2 = 0.00014329106590351052 0.5868703864792781\n",
+      "RMSE, R2 = 0.012438262436903415 0.5539468146558526\n",
       "-----\n",
       "For regularization parameter 0.1\n",
-      "RMSE, R2 = 0.00018411381296177764 0.46917228989039017\n",
+      "RMSE, R2 = 0.012143831721016728 0.5748142562293894\n",
       "-----\n"
      ]
     }
@@ -1785,7 +1788,7 @@
     "  pred_Y_from_N_reg = np.matmul(np.hstack([np.ones([test_X.shape[0], 1]), test_X]), theta_temp)\n",
     "  pred_Y_from_N_reg[np.where(pred_Y_from_N_reg<0)]=0\n",
     "  print('For regularization parameter', i)\n",
-    "  print(\"RMSE, R2 =\", MSE(test_Y, pred_Y_from_N_reg), r2_score(test_Y, pred_Y_from_N_reg))\n",
+    "  print(\"RMSE, R2 =\", MSE(test_Y, pred_Y_from_N_reg, squared=False), r2_score(test_Y, pred_Y_from_N_reg))\n",
     "  print('-----')"
    ]
   },
@@ -1828,8 +1831,8 @@
       "Model Family:                Gaussian   Df Model:                           30\n",
       "Link Function:               identity   Scale:                      0.00050810\n",
       "Method:                          IRLS   Log-Likelihood:                 177.58\n",
-      "Date:                Fri, 06 Aug 2021   Deviance:                     0.017784\n",
-      "Time:                        19:54:36   Pearson chi2:                   0.0178\n",
+      "Date:                Sun, 08 Aug 2021   Deviance:                     0.017784\n",
+      "Time:                        20:49:19   Pearson chi2:                   0.0178\n",
       "No. Iterations:                     3                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -1959,7 +1962,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE, R2 for prediction all features = 0.0001590059869786599 0.5415619143191444\n"
+      "RMSE, R2 for prediction all features = 0.012609757609829774 0.5415619143191444\n"
      ]
     },
     {
@@ -1983,7 +1986,7 @@
     "# Plot predictions compared to test_Y, and also print MSE and R^2 score\n",
     "plt.scatter(range(len(test_Y)), test_Y,  color='black')\n",
     "plt.scatter(range(len(pred_Y_from_GLM)), pred_Y_from_GLM, color='blue')\n",
-    "print(\"RMSE, R2 for prediction all features =\", MSE(test_Y, pred_Y_from_GLM), r2_score(test_Y, pred_Y_from_GLM)) #[Low error high corr]"
+    "print(\"RMSE, R2 for prediction all features =\", MSE(test_Y, pred_Y_from_GLM, squared=False), r2_score(test_Y, pred_Y_from_GLM)) #[Low error high corr]"
    ]
   },
   {
@@ -2025,7 +2028,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE, R2 for prediction all features = 9.718308045974258e-05 0.7198066172658497\n"
+      "RMSE, R2 for prediction all features = 0.00985814792239103 0.7198066172658497\n"
      ]
     },
     {
@@ -2049,7 +2052,7 @@
     "# Plot predictions compared to test_Y, and also print MSE and R^2 score\n",
     "plt.scatter(range(len(test_Y)), test_Y,  color='black')\n",
     "plt.scatter(range(len(pred_Y_from_regr)), pred_Y_from_regr, color='blue')\n",
-    "print(\"RMSE, R2 for prediction all features =\", MSE(test_Y, pred_Y_from_regr), r2_score(test_Y, pred_Y_from_regr)) #[Low error high corr]"
+    "print(\"RMSE, R2 for prediction all features =\", MSE(test_Y, pred_Y_from_regr, squared=False), r2_score(test_Y, pred_Y_from_regr)) #[Low error high corr]"
    ]
   },
   {
@@ -2070,21 +2073,21 @@
    "source": [
     "## Results\n",
     "\n",
-    "|Method      |RMSE (10e-6)     |R2               |\n",
+    "|Method      |RMSE (10e-3)     |R2               |\n",
     "|------------|-----------------|-----------------|\n",
-    "| Gradient Descent | 143 | 0.59 |\n",
-    "| Normal Equations | 159 | 0.54 |\n",
-    "| Regularized Normal Equations   | 136 | 0.61 |\n",
-    "| Generalized Linear Model (GLM) | 159 | 0.54 |\n",
-    "| Random Forests | 97 | 0.72 |\n"
+    "| Gradient Descent | 11.9 | 0.59 |\n",
+    "| Normal Equations | 12.6 | 0.54 |\n",
+    "| Regularized Normal Equations   | 12.1 | 0.61 |\n",
+    "| Generalized Linear Model (GLM) | 12.6 | 0.54 |\n",
+    "| Random Forests | 9.9 | 0.72 |\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Gradient Descent performed best, with Regularized Normal Equations a close second."
+   ]
   }
  ],
  "metadata": {
